--- a/style.css
+++ b/style.css
@@ -12,12 +12,12 @@ font-family:  'Roboto', sans-serif;
 }
 
 h1 { 
-	color: #575F7D ;
+	color: #C40018;
 font-size: 32px;
 font-weight: 900;
 }
 h2 {
-color: #7ECE90;
+color: #005691;
  font-family: Courier;
  font-size: 20px;
 font-weight: lighter;
@@ -56,16 +56,11 @@ width: 400px;
   }
 }
 
-
-
-
-
-
 .card-white {
 background-color: white;
 padding: 40px;
-box-shadow: 0px 10px 30px rgba(0,0,0,0.1)
-border-radius: 4px;
+box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
+border-radius: 20px;
 margin: 20px 0px;
 text-align: center;
 }
@@ -75,24 +70,20 @@ border-radius: 50%;
 }
 
 .btn-blue {
-background-color: #6B72E1;
+background-color: #005691;
 color: white;
 padding: 15px 20px;
 border-radius: 4px;
-
 }
 
-
- .btn-blue:hover {
+.btn-blue:hover {
 background-color: black;
 color: white;
 }
 
-
 .list-inline {
 list-style: none;
 padding-left: 0px;
-
 }
 
 .list-inline li {
@@ -111,7 +102,6 @@ color: black;
 
 #introduction p {
 margin-bottom: 40px;
-
 
 }
 
